<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.example.android.moviecatalogapp.primary_ui.activities.settings.SettingsActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notification"
        android:textSize="12sp"
        android:textColor="@color/colorAccentGreenEmerald"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_daily_reminder_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/sw_compat_daily_reminder_notification"
            android:layout_toLeftOf="@+id/sw_compat_daily_reminder_notification"
            android:text="@string/daily_reminder_notification"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_daily_reminder_notification"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/sw_compat_daily_reminder_notification"
            android:layout_toLeftOf="@+id/sw_compat_daily_reminder_notification"
            android:text="@string/turn_on_off_daily_reminder"
            android:textColor="@android:color/darker_gray"/>


        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_compat_daily_reminder_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"/>

    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_upcoming_reminder_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_toStartOf="@+id/sw_compat_upcoming_reminder_notification"
            android:layout_toLeftOf="@+id/sw_compat_upcoming_reminder_notification"
            android:text="@string/upcoming_reminder_notification"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/tv_upcoming_reminder_notification"
            android:layout_toStartOf="@+id/sw_compat_upcoming_reminder_notification"
            android:layout_toLeftOf="@+id/sw_compat_upcoming_reminder_notification"
            android:text="@string/turn_on_off_upcoming_reminder"
            android:textColor="@android:color/darker_gray"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/sw_compat_upcoming_reminder_notification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"/>

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/colorAccent"
        android:layout_marginTop="24dp"/>

    <RelativeLayout
        android:id="@+id/relative_layout_container_settings_locale"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/tv_setting_locale_activity_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/setting_locale"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_setting_locale_activity_settings"
            android:text="@string/change_your_locale"
            android:textColor="@android:color/darker_gray"/>

    </RelativeLayout>

</LinearLayout>
