<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    tools:context="com.example.android.moviecatalogapp.primary_ui.activities.details.DetailMovieActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_view_poster_activity_detail_movie"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:contentDescription="@string/image_view_poster"/>

        <TextView
            android:id="@+id/tv_title_item_detail_movie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/img_view_add_to_favorite_movie_activity_detail_movie"
            android:layout_toRightOf="@+id/img_view_poster_activity_detail_movie"
            android:layout_toEndOf="@+id/img_view_poster_activity_detail_movie"
            android:layout_toStartOf="@+id/img_view_add_to_favorite_movie_activity_detail_movie"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/img_view_add_to_favorite_movie_activity_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/image_view_add_favorite"
            android:src="@drawable/ic_star_border_black_24dp"
            android:tag="star border"/>

        <TextView
            android:id="@+id/tv_release_date_activity_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginTop="150dp"
            android:layout_toEndOf="@id/img_view_poster_activity_detail_movie"
            android:layout_toRightOf="@id/img_view_poster_activity_detail_movie"
            android:text="@string/release_date"/>

        <TextView
            android:id="@+id/tv_value_release_date_activity_detail_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_release_date_activity_detail_movie"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_toEndOf="@id/img_view_poster_activity_detail_movie"
            android:layout_toRightOf="@id/img_view_poster_activity_detail_movie" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/overview"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tv_overview_detail_movie"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
