<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relative_layout_container_item_now_playing"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingTop="@dimen/item_rc_view_vertical_margin"
    android:paddingRight="@dimen/item_rc_view_horizontal_margin"
    android:paddingLeft="@dimen/item_rc_view_horizontal_margin"
    android:paddingBottom="@dimen/item_rc_view_vertical_margin"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:layout_marginBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/background_rounded_white">

    <ImageView
        android:id="@+id/img_view_poster_item_now_playing_movie"
        android:layout_width="150dp"
        android:layout_height="180dp"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:contentDescription="@string/image_view_poster"/>

    <TextView
        android:id="@+id/tv_title_item_movie_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/img_view_poster_item_now_playing_movie"
        android:layout_toEndOf="@id/img_view_poster_item_now_playing_movie"
        android:textSize="16sp"
        android:textStyle="bold"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_description_item_movie_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/img_view_poster_item_now_playing_movie"
        android:layout_toEndOf="@id/img_view_poster_item_now_playing_movie"
        android:layout_below="@id/tv_title_item_movie_now_playing"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textSize="14sp"
        android:maxLines="3"
        android:ellipsize="end"/>

    <TextView
        android:id="@+id/tv_date_release_item_movie_now_playing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/img_view_poster_item_now_playing_movie"
        android:layout_toEndOf="@id/img_view_poster_item_now_playing_movie"
        android:layout_below="@id/tv_description_item_movie_now_playing"
        android:textSize="15sp"
        android:maxLines="2"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/tv_date_release_item_movie_now_playing"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_toRightOf="@id/img_view_poster_item_now_playing_movie"
        android:layout_toEndOf="@id/img_view_poster_item_now_playing_movie">

        <Button
            android:id="@+id/btn_detail_item_now_playing_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/detail"
            android:textColor="#ffffff"
            android:background="@drawable/background_button_rounded_green_emerald"/>

        <View
            android:layout_width="8dp"
            android:layout_height="1dp"/>

        <Button
            android:id="@+id/btn_share_item_now_playing_movie"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/share"
            android:textColor="#ffffff"
            android:background="@drawable/background_button_rounded_green_emerald"/>
    </LinearLayout>

</RelativeLayout>
